# bc_thesis_src

./: .gitignore  README.md  pyproject.toml
notebooks/: compare_algorithms.ipynb  compare_boxes.ipynb  cytoplasm_segmentation.ipynb  watershed.ipynb
src/: bboxes.py  cytoplasm_nonopt.py  cytoplasm_segmentation.py  gen_images.py  nucleus_nonopt.py  nucleus_segmentation.py  utils.py  watershed.py  watershed_labels.py
src/optuna/: optuna_cytoplasm.py  optuna_nucleus.py
src/preps/: filled_boxes.py  filled_boxes_labels.py
