[project]
name = "bc-thesis-src"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "colorcorrect>=0.9.1",
    "mahotas>=1.4.18",
    "matplotlib>=3.10.3",
    "nbformat>=5.10.4",
    "numpy>=2.2.5",
    "opencv-python>=4.11.0.86",
    "optuna>=4.3.0",
    "optuna-dashboard>=0.18.0",
    "pandas>=2.2.3",
    "plotly>=6.0.1",
    "rich>=14.0.0",
    "scikit-image>=0.25.2",
    "scikit-learn>=1.6.1",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "ruff>=0.11.8",
]
